--- a/mob/subtrain_ok.htm
+++ b/mob/subtrain_ok.htm
@@ -62,7 +62,7 @@ function playSound() {
 }
 
 function createTrain(){
-	if(Date.now() - lastSub > 1000 * 60 * 5) { return; nicks = []; lastSub = -1;}
+	if(Date.now() - lastSub > 1000 * 60 * 5) { nicks = []; lastSub = -1; return; }
 	
 	if(nicks.length == 0) return;
 
