--- a/mob/subtrain_run_by_click.htm
+++ b/mob/subtrain_run_by_click.htm
@@ -174,13 +174,13 @@ function addWagon(name){
 }
 </script>
 
-<body onclick="addWagon();">
+<body>
 
 <div id="train"> 
 
 </div>
 
-<div id="timer">
+<div id="timer" onclick="addWagon("GOGOGOGO")">
 0:00
 </div>
 
