--- a/mob/subtrain_run_by_click.htm
+++ b/mob/subtrain_run_by_click.htm
@@ -90,7 +90,7 @@ function moveTrain(){
 	train.style.left = pos+"px";
 	
 	if(pos < -length) {
-		setTimeout(createTrain, 30000);
+		//setTimeout(createTrain, 30000);
 	}
 	else {
 		setTimeout(moveTrain, 30);
