--- a/twitch_ref.htm
+++ b/twitch_ref.htm
@@ -17,6 +17,6 @@
 </style>
 <body>
 <div>
-<iframe src="http://player.twitch.tv/?channel=pierre_dunn"></iframe>
+<iframe src="http://player.twitch.tv/?channel=woodman1990"></iframe>
 </div>
 </body>
