--- a/mob/goal_600_star.htm
+++ b/mob/goal_600_star.htm
@@ -4,22 +4,13 @@ div{
   width: 500px;
   height: 500px;
 }
-#container {
-  -moz-transform: rotate(-72deg); /* Для Firefox */
-  -ms-transform: rotate(-72deg); /* Для IE */
-  -webkit-transform: rotate(-72deg); /* Для Safari, Chrome, iOS */
-  -o-transform: rotate(-72deg); /* Для Opera */
-  transform: rotate(-72deg);
-}
 </style>
 
 <div id="container">
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 500 500">
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="   M461.143,211.714l-93.7,76.5c-9.2,7.5-13.4,19.9-10.5,31.5l28.3,115.5c1.5,6.8-1.2,11.5-3,13.7c-2.8,3.5-7,5.7-11.2,5.7   c-2.6,0-5.2-0.8-8-2.7l-102.5-63c-4.9-3-10.5-4.6-16.3-4.6s-11.5,1.6-16.4,4.7l-101.5,63.1c-6.5,4.3-15.2,2.4-19.8-3.6   c-1.9-2.5-3.9-6.8-2.1-13.1l28.3-115.8c2.8-11.5-1.3-23.8-10.4-31.3l-92.3-76.3c-7.3-6.3-5.3-14.4-4.5-16.7s4.1-10,13.7-10.5   l119.7-8.6c11.8-0.9,22-8.2,26.5-19.2l45.7-111.1c3.7-9,12-9.7,14.4-9.7c2.4,0,10.7,0.7,14.4,9.7l45.7,111.1   c4.5,11,14.7,18.3,26.5,19.2l119.9,8.7c9.4,0.5,12.7,8.2,13.5,10.5C466.143,197.514,468.143,205.614,461.143,211.714z"></path>
+<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="M 10 10 H 500"></path>
 
-<path id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A" d="   M461.143,211.714l-93.7,76.5c-9.2,7.5-13.4,19.9-10.5,31.5l28.3,115.5c1.5,6.8-1.2,11.5-3,13.7c-2.8,3.5-7,5.7-11.2,5.7   c-2.6,0-5.2-0.8-8-2.7l-102.5-63c-4.9-3-10.5-4.6-16.3-4.6s-11.5,1.6-16.4,4.7l-101.5,63.1c-6.5,4.3-15.2,2.4-19.8-3.6   c-1.9-2.5-3.9-6.8-2.1-13.1l28.3-115.8c2.8-11.5-1.3-23.8-10.4-31.3l-92.3-76.3c-7.3-6.3-5.3-14.4-4.5-16.7s4.1-10,13.7-10.5   l119.7-8.6c11.8-0.9,22-8.2,26.5-19.2l45.7-111.1c3.7-9,12-9.7,14.4-9.7c2.4,0,10.7,0.7,14.4,9.7l45.7,111.1   c4.5,11,14.7,18.3,26.5,19.2l119.9,8.7c9.4,0.5,12.7,8.2,13.5,10.5C466.143,197.514,468.143,205.614,461.143,211.714z"></path>
-
-
+<path id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A" d="M 10 10 H 500"></path>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
