--- a/mob/goal_600_star.htm
+++ b/mob/goal_600_star.htm
@@ -1,16 +1,14 @@
 <style>
 div{
   margin: 20px;
-  width: 500px;
   height: 50px;
 }
 </style>
 
 <div id="container">
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 500 500">
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="M 10 10 H 500"></path>
-
-<path id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A" d="M 10 10 H 500"></path>
+<svg style="width:100%;height:100%;">
+<line x1="100%" y1="0%" x2="0%" y2="100%" fill-opacity="0" stroke-width="1" stroke="#bbb"></line>
+<line x1="100%" y1="0%" x2="0%" y2="100%" id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A"></line>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
