--- a/mob/goal_600_star.htm
+++ b/mob/goal_600_star.htm
@@ -1,14 +1,14 @@
 <style>
 div{
   margin: 20px;
-  height: 50px;
+  height: 28px;
 }
 </style>
 
 <div id="container">
 <svg style="width:100%;height:100%;">
-<line x1="0%" y1="0%" x2="100%" y2="0%" fill-opacity="0" stroke-width="1" stroke="#bbb"></line>
-<line x1="0%" y1="0%" x2="100%" y2="0%" id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A"></line>
+<line x1="0%" y1="14" x2="100%" y2="14" fill-opacity="0" stroke-width="1" stroke="#bbb"></line>
+<line x1="0%" y1="14" x2="100%" y2="14" id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A"></line>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
@@ -19,7 +19,7 @@ div{
 
 </div>
 
-<div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;margin-left:37px; margin-top:-300px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#6AED6A;">
+<div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#6AED6A;">
 <span id="cnt">0</span>
  / 600
 </div>
