--- a/mob/goal_600_star.htm
+++ b/mob/goal_600_star.htm
@@ -7,8 +7,8 @@ div{
 
 <div id="container">
 <svg style="width:100%;height:100%;">
-<line x1="0%" y1="14" x2="100%" y2="14" fill-opacity="0" stroke-width="1" stroke="#bbb"></line>
-<line x1="0%" y1="14" x2="100%" y2="14" id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A"></line>
+<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="m 0,14 h 500"></path>
+<path id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A" d="m 0,14 h 500"></path>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
