--- a/mob/goal_with_targets.htm
+++ b/mob/goal_with_targets.htm
@@ -46,9 +46,14 @@ top:20px;
 <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.animateNumber.js"></script>
 
 </div>
-
-<div id="follower_count" align=left style="margin-top:-15px;margin-left:-5px;font-family:'Nunito', sans-serif;font-size:36px;font-style:normal;font-variant:normal;font-weight:bold;line-height:42px;color:#6AED6A;">
+<div style="position:relative;top:0px;left:-15px;width:90px;text-align:center;" align=center>
+<div id="follower_count" align=center style="text-align:center;margin-top:-15px;font-family:'Nunito', sans-serif;font-size:36px;font-style:normal;font-variant:normal;font-weight:bold;line-height:32px;color:#6AED6A;">
 <span id="cnt">0</span>
+<br>
+<div align=center style="text-align:center;margin-top:-12px;font-family:'Nunito', sans-serif;font-size:30px;font-style:normal;font-variant:normal;font-weight:bold;line-height:42px;color:#6AED6A;">
+subs
+</div>
+</div>
 </div>
 
 <div class="cptn" id="target400">
