--- a/mob/goal_with_targets.htm
+++ b/mob/goal_with_targets.htm
@@ -6,36 +6,31 @@
 }
 .cptn{
 	position:absolute;
-    
-	-webkit-transform: rotate(-65deg);
-    -moz-transform: rotate(-65deg);
-    -o-transform: rotate(-65deg);
-    -ms-transform: rotate(-65deg);
-    transform: rotate(-65deg);
 	
 	left:-33px;
 	text-align:center;
 	font-family:'Nunito', sans-serif;
+	font-size: 24px;
 	width:200px;
 }
 #target400{
-top:220px;
+top:216px;
 }
 #target500{
-top:120px;
+top:116px;
 }
 #target600{
-top:20px;
+top:16px;
 }
 
 </style>
 
 <div id="container">
 <svg style="width:100%;height:100%;">
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="m 12,14 v 600"></path>
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="m 0,114 h 12"></path>
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="m 0,214 h 12"></path>
-<path fill-opacity="0" stroke-width="1" stroke="#bbb" d="m 0,14 h 12"></path>
+<path fill-opacity="0" stroke-width="24" stroke="#bbb" d="m 0,14 v 600"></path>
+<path fill-opacity="0" stroke-width="4" stroke="#000" d="m 0,114 h 12"></path>
+<path fill-opacity="0" stroke-width="4" stroke="#000" d="m 0,214 h 12"></path>
+<path fill-opacity="0" stroke-width="4" stroke="#000" d="m 0,14 h 12"></path>
 <path id="heart-path" fill-opacity="0" stroke-width="24" stroke="#6AED6A" d="m 0,614 v -600"></path>
 </svg>
 
@@ -46,7 +41,7 @@ top:20px;
 <script src="http://aishek.github.io/jquery-animateNumber/javascripts/jquery.animateNumber.js"></script>
 
 </div>
-<div style="position:relative;top:0px;left:-15px;width:90px;text-align:center;" align=center>
+<div style="position:relative;top:0px;left:-19px;width:90px;text-align:center;" align=center>
 <div id="follower_count" align=center style="text-align:center;margin-top:-15px;font-family:'Nunito', sans-serif;font-size:36px;font-style:normal;font-variant:normal;font-weight:bold;line-height:32px;color:#6AED6A;">
 <span id="cnt">0</span>
 <br>
@@ -58,20 +53,14 @@ subs
 
 <div class="cptn" id="target400">
 400 
-<br>
-эпик-кукинг стрим
 </div>
 
 <div class="cptn" id="target500">
 500 
-<br>
-сталкер-стрим
 </div>
 
 <div class="cptn" id="target600">
 600 
-<br>
-велостримы
 </div>
 
 <script>
