--- a/znd/auth.htm
+++ b/znd/auth.htm
@@ -1,6 +1,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
-$.get( "http://znd.fun/submit?" + document.location.hash , function( data ) {$("#main").html("Всё сработало, можешь закрывать страницу.");});
+$.get( "http://znd.fun/submit?" + document.location.hash.substring(1) , function( data ) {$("#main").html("Всё сработало, можешь закрывать страницу.");});
 </script>
 
 <html>
