--- a/supersimpletimerwithvalue.htm
+++ b/supersimpletimerwithvalue.htm
@@ -8,9 +8,9 @@
   </div>
   <br>
   <div style="font-size:30px;">
-    Выкупите сон стримера за &nbsp;
+    Выкупите сон стримера за
 	  <span class="price"></span>
-    &nbsp; рублей
+    рублей
   </div>
 </div>
 
