--- a/supersimpletimerwithvalue.htm
+++ b/supersimpletimerwithvalue.htm
@@ -7,7 +7,7 @@
     <span class="seconds"></span>
   </div>
   <br>
-  <div style="font-size:30px;">
+  <div style="font-size:30px;margin-top:-25px;">
     Выкупите сон стримера за
 	  <span class="price"></span>
     рублей
