--- a/znd/subgoal/index.html
+++ b/znd/subgoal/index.html
@@ -28,6 +28,6 @@ setValue(val+250);
 
 <body>
 <img id="main" src="mt3_yellow.png"></img>
-<img id="outline" src="mt3_line_transparent.png"></img>
+<img id="outline" src="mt3_line_orange.png"></img>
 <div id="text"></div>
 </body>
