--- a/znd/subgoal/index.html
+++ b/znd/subgoal/index.html
@@ -8,17 +8,16 @@ img {
   top: 0px;
 }
 div {
-  margin: 420px;
   height: 28px;
-  width: 250px;
   font-family: 'Nunito', sans-serif;
-  font-size: 56px;
+  font-size: 92px;
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
   line-height: 26.4px;
   color: #FFD600;
-  text-align: center;
+  margin-top: 440px;
+  margin-left: 30px;
 }
 </style>
 
