--- a/znd/subgoal/index.html
+++ b/znd/subgoal/index.html
@@ -6,6 +6,9 @@ img {
   position: absolute;
   left: 0px;
   top: 0px;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
 div {
   height: 28px;
