--- a/znd/subgoal/index.html
+++ b/znd/subgoal/index.html
@@ -1,5 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
 
 <style>
 img {
@@ -12,7 +12,7 @@ img {
 }
 div {
   height: 28px;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Neucha', cursive;
   font-size: 92px;
   font-style: normal;
   font-variant: normal;
