--- a/znd/subgoal/index.html
+++ b/znd/subgoal/index.html
@@ -52,5 +52,7 @@ setInterval(update,1000);
 <img id="outline" src="mt3_line_orange.png"></img>
 <div id="text">
   <span id="cnt">0</span>
+  <span id="of">/333</span>
+  
 </div>
 </body>
