--- a/cake/index.htm
+++ b/cake/index.htm
@@ -10,6 +10,7 @@ div{
 <svg style="width:100%;height:100%;">
 <path fill-opacity="0" stroke-width="28" stroke="#bbb" d="m 0,14 h 500"></path>
 <path id="heart-path" fill-opacity="0" stroke-width="32" stroke="#fff" d="m 0,14 h 500"></path>
+<path id="heart-path" fill-opacity="0" stroke-width="36" stroke="#000" d="m 0,14 h 500"></path>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
@@ -22,7 +23,7 @@ div{
 
 <div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#6AED6A;">
 <span id="cnt">0</span>
- / 1000
+ / 1500
 </div>
 
 
@@ -43,7 +44,7 @@ $.get( url, function( data ) {
   .animateNumber({ number: count });
   was = count;
   
-  bar.animate(parseInt(count)/600);  
+  bar.animate(parseInt(count)/1500);  
 });
 }
 update();
