--- a/cake/index.htm
+++ b/cake/index.htm
@@ -21,7 +21,7 @@ div{
 
 </div>
 
-<div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#6AED6A;">
+<div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
 <span id="cnt">0</span>
  / 1500
 </div>
