--- a/cake/index.htm
+++ b/cake/index.htm
@@ -8,7 +8,7 @@ div{
 
 <div id="container">
 <svg style="width:100%;height:100%;">
-<path id="heart-path" fill-opacity="0" stroke-width="36" stroke="#000" d="m 0,14 h 500"></path>
+<path id="back-path" fill-opacity="0" stroke-width="36" stroke="#000" d="m 0,14 h 500"></path>
 <path fill-opacity="0" stroke-width="28" stroke="#bbb" d="m 0,14 h 500"></path>
 <path id="heart-path" fill-opacity="0" stroke-width="32" stroke="#fff" d="m 0,14 h 500"></path>
 </svg>
