--- a/cake/index.htm
+++ b/cake/index.htm
@@ -4,6 +4,10 @@ div{
   height: 28px;
   width: 500px;
 }
+.container{
+  border: 1px solid #ccc !important;
+  border-color:#000;
+}
 </style>
 
 <div id="container">
