--- a/cake/index.htm
+++ b/cake/index.htm
@@ -3,12 +3,17 @@ div{
   margin: 20px;
   height: 28px;
   width: 500px;
+  display: inline-block; 
 }
 #container{
   border: 1px solid #ccc !important;
   border-color:#000;
 }
 </style>
+
+<div id="follower_count" style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
+<span id="cnt">0</span>
+</div>
 
 <div id="container">
 <svg style="width:100%;height:100%;">
@@ -25,9 +30,8 @@ div{
 
 </div>
 
-<div id="follower_count" align=center style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
-<span id="cnt">0</span>
- / 1500
+<div>
+  1500
 </div>
 
 
