--- a/cake/index.htm
+++ b/cake/index.htm
@@ -30,10 +30,9 @@ div{
 
 </div>
 
-<div>
+<div style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
   1500
 </div>
-
 
 <script>
 var bar = new ProgressBar.Path('#heart-path', {
@@ -56,5 +55,5 @@ $.get( url, function( data ) {
 });
 }
 update();
-setInterval(update,1000);
+setInterval(update,10000);
 </script>
