--- a/cake/index.htm
+++ b/cake/index.htm
@@ -5,6 +5,7 @@ div{
   display: inline-block; 
 }
 #container{
+  width: 500px;
   border: 2px solid #ccc !important;
   border-color:#000;
 }
@@ -18,7 +19,6 @@ div{
 <svg style="width:100%;height:100%;">
 <path id="back-path" fill-opacity="0" stroke-width="42" stroke="#000" d="m 0,14 h 500"></path>
 <path fill-opacity="0" stroke-width="42" stroke="#bbb" d="m 0,14 h 500"></path>
-<path id="heart-path" fill-opacity="0" stroke-width="42" stroke="#fff" d="m 0,14 h 500"></path>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
