--- a/cake/index.htm
+++ b/cake/index.htm
@@ -9,9 +9,12 @@ div{
   border: 2px solid #ccc !important;
   border-color:#000;
 }
+.caption{
+  width:140px;
+}
 </style>
 
-<div id="follower_count" style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
+<div class="caption" id="follower_count" style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
 <span id="cnt">0</span>
 </div>
 
@@ -29,7 +32,7 @@ div{
 
 </div>
 
-<div style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
+<div class="caption" style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
   1500
 </div>
 
