--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -4,11 +4,15 @@ div{
   height: 42px;
   display: inline-block; 
 }
+  
 #container{
   width: 500px;
   border: 2px solid #ccc !important;
   border-color:#000;
+  margin-left: 50px;
+  margin-top: -50px;
 }
+  
 .caption{
   width:700px;
   margin-left:500px;
