--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -14,8 +14,9 @@ div{
 }
   
 .caption{
-  width: 700px;
   margin-left: -400px;
+  position: absolute;
+  margin-top: 27px;
 }
 
 @-webkit-keyframes shake {
