--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -9,7 +9,7 @@ div{
   width: 500px;
   border: 2px solid #ccc !important;
   border-color:#000;
-  margin-left: 50px;
+  margin-left: 10px;
   margin-top: 10px;
 }
   
@@ -19,6 +19,10 @@ div{
   margin-top: 27px;
 }
 
+.run-animation {
+  animation: shake 10s 1; 
+}  
+  
 @-webkit-keyframes shake {
 0%{-webkit-transform: rotate(0deg);}
 5%{-webkit-transform: rotate(25deg);}
@@ -44,7 +48,7 @@ div{
 }
 </style>
 
-
+<img id="icon" src="https://static-cdn.jtvnw.net/badges/v1/fde64ad8-db00-4d12-8c69-b4996481f1fe/3" height="56">
 
 <div id="container">
 <svg style="width:100%;height:100%;">
@@ -75,6 +79,9 @@ $.get( url, function( data ) {
   //console.log(count);
   $('#cnt').prop('number', was)
   .animateNumber({ number: count });
+  if(was != count) {
+    $("#icon").removeClass("run-animation").addClass("run-animation");
+  }
   was = count;
   
   bar.animate(parseInt(count)/1500);  
