--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -3,6 +3,13 @@ div{
   margin: 5px;
   height: 52px;
   display: inline-block; 
+  font-family:'Nunito', sans-serif;
+  font-size:56px;
+  font-style:normal;
+  font-variant:normal;
+  font-weight:bold;
+  line-height:26.4px;
+  color:#555;
 }
   
 #container{
