--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -21,7 +21,7 @@ div{
 }
   
 .caption{
-  margin-left: -400px;
+  margin-left: -333px;
   position: absolute;
   margin-top: 27px;
 }
@@ -75,7 +75,7 @@ div{
 <span id="cnt">0</span>
 </div>
 
-<div class="caption">
+<div class="caption" style="margin-left: 404px;">
   <span id="maxcnt">2000</span>
 </div>
 
