--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -9,12 +9,12 @@ div{
   font-variant:normal;
   font-weight:bold;
   line-height:26.4px;
-  color:#555;
+  color:#000;
 }
   
 #container{
   width: 500px;
-  border: 2px solid #ccc !important;
+  border: 4px solid #ccc !important;
   border-color:#000;
   margin-left: 10px;
   margin-top: 10px;
@@ -59,8 +59,8 @@ div{
 
 <div id="container">
 <svg style="width:100%;height:100%;">
-<path fill-opacity="0" stroke-width="76" stroke="#999" d="m 0,14 h 500"></path>
-<path id="heart-path" fill-opacity="0" stroke-width="76" stroke="#ddd" d="m 0,14 h 500"></path>
+<path fill-opacity="0.5" stroke-width="76" stroke="#000" d="m 0,14 h 500"></path>
+<path id="heart-path" fill-opacity="0" stroke-width="76" stroke="#fff" d="m 0,14 h 500"></path>
 </svg>
 
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
@@ -75,7 +75,7 @@ div{
 <span id="cnt">0</span>
 </div>
 
-<div class="caption" style="margin-left: 404px;">
+<div class="caption" style="margin-left: 4px;">
   <span id="maxcnt">2000</span>
 </div>
 
