--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -57,9 +57,8 @@ div{
 
 <img id="icon" src="https://static-cdn.jtvnw.net/badges/v1/fde64ad8-db00-4d12-8c69-b4996481f1fe/3" height="56">
 
-<div id="container">
+<div id="container" style="background-color:rgba(0,0,0,0.5)">
 <svg style="width:100%;height:100%;">
-<path fill-opacity="0.5" stroke-width="76" stroke="#000" d="m 0,14 h 500"></path>
 <path id="heart-path" fill-opacity="0" stroke-width="76" stroke="#fff" d="m 0,14 h 500"></path>
 </svg>
 
