--- a/cake/animated.htm
+++ b/cake/animated.htm
@@ -8,14 +8,14 @@ div{
   font-style:normal;
   font-variant:normal;
   font-weight:bold;
+  font-color:#000;
   line-height:26.4px;
   color:#000;
 }
   
 #container{
   width: 500px;
-  border: 4px solid #ccc !important;
-  border-color:#000;
+  border: 4px solid #000 !important;
   margin-left: 10px;
   margin-top: 10px;
 }
@@ -70,7 +70,7 @@ div{
 
 </div>
 
-<div class="caption" id="follower_count" style="font-family:'Nunito', sans-serif;font-size:56px;font-style:normal;font-variant:normal;font-weight:bold;line-height:26.4px;color:#555;">
+<div class="caption" id="follower_count">
 <span id="cnt">0</span>
 </div>
 
