--- a/znd/subalert/test_alert.htm
+++ b/znd/subalert/test_alert.htm
@@ -68,6 +68,22 @@ function queuePoller() {
 	}	
 }
 var animationPhase = 0;
+
+var soundFile = document.createElement("audio");
+soundFile.preload = "auto";
+var src = document.createElement("source");
+src.src = "https://etmad.github.io/znd/subalert/sound.mp3";
+soundFile.appendChild(src);
+soundFile.load();
+soundFile.volume = 0.000000;
+soundFile.play();
+function playSound() {
+   soundFile.currentTime = 0.01;
+   soundFile.volume = 0.2;
+   setTimeout(function(){soundFile.play();},1);
+}
+
+	
 function showAnimation(nick) {
 	document.getElementById("text").innerHTML = nick;
 	var cnt = 0;
