--- a/znd/subalert/test_alert.htm
+++ b/znd/subalert/test_alert.htm
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
 
 <style>
 @font-face {
@@ -7,7 +8,7 @@
 }
 
 div {
-    font-family:'Nunito', sans-serif;
+        font-family: 'Neucha', cursive;
 	font-size:56px;
 	font-style:normal;
 	font-variant:normal;
