--- a/znd/subalert/test_alert.htm
+++ b/znd/subalert/test_alert.htm
@@ -14,7 +14,7 @@ div {
 	font-variant:normal;
 	font-weight:bold;
 	line-height:26.4px;
-	color:#555;
+	color:#6fe691;
 	
 	font-face : pixelatedFont;
 	display : inline-block;
