--- a/znd/subalert/test_alert.htm
+++ b/znd/subalert/test_alert.htm
@@ -15,7 +15,7 @@ div {
 	font-weight:bold;
 	line-height:26.4px;
 	color:#39fbcf;
-	
+	text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;s
 	font-face : pixelatedFont;
 	display : inline-block;
 	margin-right : -15px;
