--- a/iframe.html
+++ b/iframe.html
@@ -1,7 +1,7 @@
-<div style="position: absolute; left: 0px; top: 0px; border: solid 2px #555; width:594px; height:332px;">
+<html><head></head><body><div style="position: absolute; left: 0px; top: 0px; width:480px; height:642px;">
 <div style="overflow: hidden; margin-top: -100px; margin-left: -25px;">
 </div>
-<iframe src="http://glympse.com/!cxc" scrolling="no" style="height: 490px; border: 0px none; width: 619px; margin-top: -60px; margin-left: -24px; ">
+<iframe src="http://glympse.com/!cxc" scrolling="no" style="height: 742px; border: 0px none; width: 480px; margin-top: -100px; margin-left: 0px; ">
 </iframe>
 </div>
-</div>
+</body></html>
