--- a/gasmachat/index.html
+++ b/gasmachat/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <div id="chat"></div>
 <!-- partial -->
-  <script src='https://alca.sfo2.cdn.digitaloceanspaces.com/tmijs/1.4.2/tmi.min.js'></script>
+  <script src='tmi.min.js'></script>
 <script src='https://twemoji.maxcdn.com/2/twemoji.min.js?2.3.0'></script><script  src="./script.js"></script>
 
 </body>
