--- a/f1/index.html
+++ b/f1/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+    < title > HTML5 live broadcast
+    <link href="http://vjs.zencdn.net/5.19/video-js.min.css" rel="stylesheet">
+    <script src="https://vjs.zencdn.net/5.19/video.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/videojs-flash@2/dist/videojs-flash.min.js"></script>
+
+</head>
+<body>
+
+<video id="myvideo" class="video-js vjs-default-skin" controls preload="auto"
+       width="1280" height="720" poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
+    <source src="rtmp://live.restream.io/pull/play_2141841_dd78187293bbc5862f13"Type = RTMP / flv" >
+    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
+        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+    </p>
+</video>
+
+</body>
+
+</html>
